Copyright (c) 2004-2008 Infrae. All rights reserved.
See also LICENSE.txt


SilvaNewsNetwork changes
========================

SilvaNewsNetwork 2.8 (unreleased)
---------------------------------

New Features
~~~~~~~~~~~~

- First release for Silva 2.2, no longer backwards compatible
  with prior Silva releases

Bugs Fixed
~~~~~~~~~~

- Fixed issue that made that broken images in news items resulted in
  failing searches.

- Added 'unblock' css class to viewer field iterators so links render
  properly (resulting from removal of the sortable id/class)

- correct localization datetime issues with rssaggregator's rss/atom feeds
  and inlineviewer newsprovider. 

SilvaNewsNetwork 2.7.5 (2009-03-26)
-----------------------------------

Bugs Fixed
~~~~~~~~~~

- The 'publish now' button in the edit tab of news items raised a 404
  when clicked, and it wasn't translated.

SilvaNewsNetwork 2.7.4 (2009-03-05)
-----------------------------------

Bugs Fixed
~~~~~~~~~~

- The rss.xml feed on news and agenda viewers did not validate against
  the rss 1.0 specification

SilvaNewsNetwork 2.7.3 (2009/02/19)
-----------------------------------
  
Bugs Fixed
~~~~~~~~~~

- The 'publish now' button for news and agenda items was not
  setting the display date time.  The result was that new items
  would not be found by filters
  
- removed the SNN 2.6 upgrader (which refreshes the catalog).
  All news items do need to be reindexed.  To do this, use the
  "Partial catalog rebuilds" tab of the Silva Extensions Service
  (in the ZMI) to rebuild each Silva News Publication.

- Added a dummy upgrader for SNN 2.7, so it appears that 
  the upgrade upgrades to 2.7

SilvaNewsNetwork 2.7.2 (2009/02/12)
-----------------------------------
  
Bugs Fixed
~~~~~~~~~~

- removed debugging output on rss aggregator public view,
  and added additional css classes

- rss aggregator public view: adjusted feed link to be the 
  html link, rather than the uri of the syndication feed
