@@ -7,7 +7,6 @@
 
   tal:define="view here;
         model view/REQUEST/model;
-                   global silva_root view/silva_root;
                    global formatdate nocall:view/service_news/format_date;
                    "
 >
