@@ -1,0 +1,25 @@
+<table class="timetable" metal:define-macro="timetable">
+ <tbody>
+  <tr class="even">
+   <td>
+    <a tal:condition="python:model.year_in_range(int(currentyear)-1)"
+       tal:content="structure python: '&laquo;&nbsp;%s' % str(int(currentyear) - 1)" 
+       tal:attributes="href python:'?month=%s&year=%s&view=view_archive' % (currentmonth, int(currentyear) - 1)" />
+   </td>
+   <tal:repeat repeat="month months">
+    <tal:define define="id repeat/month/index">
+     <td align="center" tal:attributes="class python:test(id == int(currentmonth) - 1, 'selected_month', '');">
+      <a tal:content="month" 
+         tal:attributes="href python: '?month=%s&year=%s&view=view_archive' % (id + 1, currentyear)" />
+     </td>
+    </tal:define>
+   </tal:repeat>
+   <td>
+    <a tal:condition="python:model.year_in_range(int(currentyear)+1)"
+      tal:content="structure python: '%s&nbsp;&raquo;' % str(int(currentyear) + 1)" 
+       tal:attributes="href python:'?month=%s&year=%s&view=view_archive' % (currentmonth, int(currentyear) + 1)" />
+   </td>
+  </tr>
+ </tbody>
+</table>
+
